# CudaParticleSystem

./: .gitignore  CMakeLists.txt  README.md
conf/: config.json
include/: OBJLoader.h  context.h  exporter.hpp  field.hpp  gui.hpp  importer.hpp  particle.hpp  particle_system.hpp  rasterizer.hpp  scene.hpp
include/fields/: gravity_field.hpp  whirlwind_fileld.hpp
src/: main.cu  particle_system_kernel.cu  rasterizer_kernel.cu
